<resources>
    <string name="app_name">Lokally</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="login">Log in</string>
    <string name="login_underlined"><u>LOG IN</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_action"><u>REGISTER</u></string>
    <string name="username">Username</string>
    <string name="login_now">Click to Login</string>
    <string name="not_registered_yet_click_here_to_register">Not registered yet? Click here to register.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="support_local_love_local">Support Local, Love Local.</string>
    <string name="lokally">Lokally</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_prompt">ALREADY HAVE AN ACCOUNT?</string>
    <string name="back_button_desc">Back</string>
    <string name="please_sign_up_to_continue">Sign Up to continue</string>
    <string name="app_logo_description">Lokally</string>
    <string name="deeps">Lokally</string>
    <string name="beer_cafe">E-commerce App</string>
    <string name="welcome">Welcome to Lokally!</string>
    <string name="welcome_long_description">Let\'s get started.</string>
    <string name="dont_have_an_account">DIDN\'T HAVE AN ACCOUNT?</string>
    <string name="please_sign_in_to_continue">Sign in to continue</string>
    <string name="edit_profile_info">Edit Profile</string>
    <string name="items_sold">Items Sold</string>
    <string name="active_listings">Active Listings</string>
    <string name="rating">Rating</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="ratings">Ratings</string>
    <string name="welcome_home">Welcome to Lokally!</string>
    <string name="with_lokally">With Lokally, you can easily…</string>
</resources>